Fix li display on mobile projects page.

--- a/css/style.css
+++ b/css/style.css
@@ -834,7 +834,8 @@
 	#bootstrapOverrides .projectsNav .nav li{
 		display: inline-block;
 		float: left;
-		height: 100%
+		height: 100%;
+		width: 16.5vw;
 	}
 
 	#bootstrapOverrides .projectsNav .navbar-nav{
